fixed alignment issues

--- a/static/scss/partials/_nav.sass
+++ b/static/scss/partials/_nav.sass
@@ -29,8 +29,14 @@
     padding-left: 6rem
     padding-right: 4rem
     position: fixed
-    padding-top: 2rem
     transition: all .2s ease-in-out
+    .navbar-dark
+    .navbar-nav
+        .nav-link
+            color: #fff
+            font-weight: bold
+            &:hover
+                color: #ffc107
 
 .navbar-flexible
     top: 0
@@ -39,23 +45,16 @@
     width: 100%
     padding-left: 6rem
     padding-right: 4rem
-    padding-top: 2rem
+
     transition: all .2s ease-in-out
 
-.navbar-dark
+.bgwhite
+    background-color: white
+    .navbar-dark
     .navbar-nav
         .nav-link
-            color: #ffffff
+            color: #000
             font-weight: bold
-            &:hover
-                color: #ffc107
-.white
-    background-color: white
-    color: #000
-    .navbar-dark
-        .navbar-nav
-            .nav-link
-                color: #000 !important
 
 .right_border
     &:after
@@ -63,3 +62,5 @@
         border-right: 1px solid #cccccc
         height: 1px
         padding-left: 1rem
+.fa-search
+    color: #ccc
