--- a/static/scss/partials/_plan.sass
+++ b/static/scss/partials/_plan.sass
@@ -70,3 +70,18 @@
 .paypal_checkout
     padding-top: 2rem
     padding-bottom: 8rem
+.bitcoin__btn
+    .btn-warning
+        padding: .7rem 2rem
+        font-size: 12px
+        font-weight: bold
+        background-color: #ffd703
+        border: 0
+.buttons-container
+    .paypal-button
+    .paypal-button-shape-rect
+        border-radius: 34px
+.fa-check
+    color: #55b450
+.fa-times
+    color: #bbb
